Fixed spacing for contents of home page

--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@
 	align-items: center;
 	height: calc(96vh - 6em);
 	width: 100vw;
+	padding-top: 6em;
 }
 
 @media screen and (orientation: portrait) {
@@ -32,7 +33,8 @@
 
 	#main-flex {
 		flex-direction: column;
-		height: 100vh;
+		height: calc(96vh - 10em);
+		padding-top: 10em;
 	}
 }
 
